@@ -11,7 +11,7 @@ data "template_file" "check_active_worker" {
   count = local.post_provisioning_ops == true && var.check_node_active != "none" ? 1 : 0
 }
 
-resource null_resource "check_worker_active" {  
+resource null_resource "check_worker_active" {
   triggers = {
     node_pools = length(data.oci_containerengine_node_pools.all_node_pools.node_pools)
   }
