@@ -10,12 +10,12 @@ data "template_file" "drain" {
 data "template_file" "drainlist" {
   template = file("${path.module}/scripts/drainlist.py")
 
-   vars = {
-     cluster_id       = oci_containerengine_cluster.k8s_cluster.id
-     compartment_id   = var.compartment_id
-     region           = var.region
-     pools_to_drain   = var.label_prefix == "none" ? trim(join(",", formatlist("'%s'", var.node_pools_to_drain)), "'") : trim(join(",", formatlist("'%s-%s'", var.label_prefix, var.node_pools_to_drain)), "'")    
-   }  
+  vars = {
+    cluster_id     = oci_containerengine_cluster.k8s_cluster.id
+    compartment_id = var.compartment_id
+    region         = var.region
+    pools_to_drain = var.label_prefix == "none" ? trim(join(",", formatlist("'%s'", var.node_pools_to_drain)), "'") : trim(join(",", formatlist("'%s-%s'", var.label_prefix, var.node_pools_to_drain)), "'")
+  }
 
   count = var.nodepool_drain == true ? 1 : 0
 }
