@@ -9,7 +9,7 @@ resource "oci_core_subnet" "cp" {
   prohibit_public_ip_on_vnic = var.cluster_access == "private" ? true : false
   route_table_id             = var.cluster_access == "private" ? var.oke_network_vcn.nat_route_id : var.oke_network_vcn.ig_route_id
   security_list_ids          = [oci_core_security_list.control_plane_seclist.id]
-  vcn_id = var.oke_network_vcn.vcn_id
+  vcn_id                     = var.oke_network_vcn.vcn_id
 }
 
 resource "oci_core_subnet" "workers" {
